added fahrenheit/celsiu toggles

--- a/app/index.html
+++ b/app/index.html
@@ -68,5 +68,6 @@
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="app.js"></script>
 	<script src="states.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </body>
 </html>
