added icons and temp data

--- a/app/index.html
+++ b/app/index.html
@@ -19,37 +19,37 @@
 			<ul>
 				<li>
 					<a ui-sref="beef" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-cow"></i></span>
 						<span class="food-label">Beef</span>
 					</a>
 				</li>
 				<li>
 					<a ui-sref="pork" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-pig"></i></span>
 						<span class="food-label">Pork</span>
 					</a>
 				</li>
 				<li>
 					<a ui-sref="chicken" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-chicken"></i></span>
 						<span class="food-label">Chicken</span>
 					</a>
 				</li>
 				<li>
 					<a ui-sref="turkey" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-turkey"></i></span>
 						<span class="food-label">Turkey</span>
 					</a>
 				</li>
 				<li>
 					<a ui-sref="lamb" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-lamb"></i></span>
 						<span class="food-label">Lamb</span>
 					</a>
 				</li>
 				<li>
 					<a ui-sref="fish" ng-click="showPageToggle()">
-						<span class="food-icon">[ICON HERE]</span>
+						<span class="food-icon"><i class="fi fi-fish"></i></span>
 						<span class="food-label">Fish</span>
 					</a>
 				</li>
