updated some temps and added favicon

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,12 @@
 	<title>Food Temperatures</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<link rel="stylesheet" href="assets/css/styles.css">
+	<!-- Fav Icon -->
+	<link rel="apple-touch-icon" type="image/png" href="assets/img/logo.png" />
+	<link rel="apple-touch-icon-precomposed" type="image/png" href="assets/img/logo.png" />
+	<link rel="icon" type="image/png" href="assets/img/logo.png" />
 	<!--[if IE]>
 		<script src="assets/js/lib/respond.js"></script>
 		<script src="assets/js/lib/html5.js"></script>
@@ -80,6 +84,8 @@
 		if (window.navigator.standalone == true) {
  			document.getElementById("foodApp").className = "ios-web-app";
 		}
+
+
 	</script>
 </body>
 </html>
